# stack-pr

./: README.md  pyproject.toml
.github/workflows/: lint.yml
src/stack_pr/: cli.py  git.py  shell_commands.py
tests/: test_misc.py
